# lapki

./: .gitignore  README.md  dz1.c  eco.py  lab01.c  lab012.c  lab02.c  lab03.c  lab04.c  lab05.c  lab06.c  lab07.c  lab08.c  lab09.c  lab10.c  lab11.c  lab12.c  lab13.c  lab14.c  lab15.c  lab16.c  rucksack.c  saod_s1_lab01.c  saod_s1_lab02.c  saod_s1_lab04.c  saod_s2_lab02.c
andr/: main.c  old.c  os10s.c  s2prgrm_krs.c
arch/1_bash/: script.sh
arch/2_cpp/: main.cpp  out.csv
crypto_s7/: lab_01_lib.c  lab_01_lib.h
ctf/: n2.py  pricol.py
dimon/: hash_table.cpp  input.txt  output.txt
five_g_netwroks_s7/: array_ant21.py  array_ant21_48.py  task_channel.py  task_div.py  task_div2.py
kursach/: text.txt
kuznetsov/: algs.csv  edges1.txt  edges2.txt  flow.c  flow.py
ml_s6/: breast_cancer.csv  kurs_cnn_emnist.ipynb  kurs_cnn_emnist_andr.ipynb  kurs_cnn_emnist_old.ipynb  lab1_lin_reg.ipynb  lab1_perceptron.ipynb  task1_1.ipynb
networking_s6/: client.c  name.txt  server.c
os_s5/: dict_cli.sh  kursach_html.sh
rusya/: client.c  server.c  shared.h
rusya 2/: server.c  shared.h
tauri_paper/: .eslintrc  .gitignore  TODO.md  config.json  index.html  init.rb  package-lock.json  package.json  tsconfig.json  vite.config.ts
tauri_paper/src-tauri/: .taurignore  5g_planner_config.json  Cargo.toml  asreqsaeqweqawe.json  easdasd.json  map.json  map2.json  map3.json  map4.json  map5.json  new.json  qweqweqwe.json  tauri.conf.json  test_new_map.json  untitled.json
tauri_paper/src-tauri/src/: geometry.rs  heatmap.rs  main.rs  random_tries.rs  room_state.rs
(+228 files in other folders)
