[package]
name = "tauri_paper"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[profile.dev]
opt-level = 3
debug = false

[profile.dev.package."*"]
opt-level = 3
debug = false

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "process-exit", "window-set-title", "dialog-confirm", "dialog-save", "dialog-ask", "dialog-open", "dialog-message", "notification-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
png = "0.17.9"
tokio = { version = "1.29.1", features = ["full"] }
rand = { version = "0.8.5", features = ["small_rng"] }
tokio-util = "0.7.10"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
